--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  <link rel="stylesheet" href="css/style.css">
 	  <link href="css/all.css" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-	  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -111,8 +111,18 @@
 					<button id="select">SELECT</button>
 				</ul>
 			</div>
-
 		</section>
+
+		<footer>
+			<div class="foot-links">
+				<a href="#">Privacy</a>
+				<a href="#">Terms</a>
+				<a href="#">Contact</a>
+			</div>
+
+			<p class="copy">Copyright 2016, Original Trombones</p>
+		</footer>
+
 
 
 	</main>
