--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	  <link rel="stylesheet" href="css/style.css">
 	  <link href="css/all.css" rel="stylesheet">
-	  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css?family=Raleway:200&display=swap" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
 	<nav id="nav-bar">
-		<div id="logo">
-			<img id="header-img" src="" alt=" logo of the company">
+		<div class="logo">
+			<img id="header-img" src="image/logo.png" alt=" logo of the company">
+			<p>Original Trombones</p>
 		</div>
 		<div id="links">
 			<a href="#">Features</a>
