Fix header section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<form action="mailto:https://www.freecodecamp.com/email-submit" method="GET">
 				<input id="email" class="myemail" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" type="email" required placeholder="Enter your email"><br>
 				<a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">
-				<button id="submit" type="submit" placeholder="#">Get Started</button>
+				<button id="submit" type="submit" placeholder="#">GET STARTED</button>
 				</a>
 
 			</form>
