--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	  <meta charset="UTF-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	  <link rel="stylesheet" href="css/style.css">
-	  <link href="css/all.css" rel="stylesheet">
+	  <link rel="stylesheet" type="text/css" href="css/style.css">
 	  <link href="https://fonts.googleapis.com/css?family=Raleway:200&display=swap" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet">
+	  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 </head>
 <body>
@@ -25,25 +25,25 @@
 		</div>
 	</nav>
 
-		<section id="header">
-			<div id="title">
-				<h2>Handcrafted, home-made masterpieces</h2>
-			</div>
-			<form id="form">
-				<form action="mailto:https://www.freecodecamp.com/email-submit" method="GET">
-				<input id="email" class="myemail" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" type="email" required placeholder="Enter your email"><br>
-				<a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">
-				<button id="submit" type="submit" placeholder="#">GET STARTED</button>
-				</a>
+	<section id="header">
+		<div id="title">
+			<h2>Handcrafted, home-made masterpieces</h2>
+		</div>
+		<form id="form">
+			<form action="mailto:https://www.freecodecamp.com/email-submit" method="GET">
+			<input id="email" class="myemail" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" type="email" required placeholder="Enter your email"><br>
+			<a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">
+			<button id="submit" type="submit" placeholder="#">GET STARTED</button>
+			</a>
 
-			</form>
-		</section>
+		</form>
+	</section>
 
 	<main>
 		<div id="content">
 
 			<div class="icon">
-				<i class="fas fa-shipping-fast"></i>
+				<i class='fas fa-camera'></i>
 			</div>
 			<div class="desc">
 				<h2>Premium Materials</h2>
@@ -51,7 +51,7 @@
 			</div>
 
 			<div class="icon">
-				<i class="fas fa-swimmer"></i>
+				<i class="fas fa-luggage-cart"></i>
 			</div>
 			<div class="desc">
 				<h2>Fast Shipping</h2>
@@ -59,7 +59,7 @@
 			</div>
 
 			<div class="icon">
-				<i class="fas fa-plane-departure"></i>
+				<i class="fas fa-handshake"></i>
 			</div>
 			<div class="desc">
 				<h2>Quality Assurance</h2>
@@ -124,11 +124,6 @@
 			<p class="copy">Copyright 2016, Original Trombones</p>
 		</footer>
 
-
-
 	</main>
-
-	<footer>
-	</footer>
 </body>
 </html>
