Add margin to the header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<header id="header">
 		<nav id="nav-bar">
 			<div class="logo">
-				<img id="header-img" src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjU6oy9gKnkAhXrVBUIHe3WDXgQjRx6BAgBEAQ&url=https%3A%2F%2Ffreerangestock.com%2Fphotos%2F117973%2Fjazz-silhouette-.html&psig=AOvVaw2oaBHQ79m8MS0vbtYvMGOQ&ust=1567199826987307" alt=" logo of the company">
+				<img id="header-img" src="Image/logo.png">
 				<p>Original Trombones</p>
 			</div>
 			<div id="navlink">
@@ -34,7 +34,6 @@
 			<input id="email" type="email" name="email" required placeholder="Enter your email">
 			<br>
 			<input type="submit" id="submit" value="GET STARTED" placeholder="#">
-
 
 		</form>
 	</section>
