--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
 		</footer>
 
 	</main>
-	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+	<!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 </body>
 </html>
