--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 				<img id="header-img" src="Image/logo.png">
 				<p>Original Trombones</p>
 			</div>
+
+			<label for="toggle">&#9776;</label>
+			<input type="checkbox" id="toggle"/>
 			<div id="navlink">
 				<a class="nav-link" href="#content">Features</a>
 				<a class="nav-link" href="#video">How it Works</a>
